feat: add stylelint config

--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -13,4 +13,4 @@
    *    https://www.npmjs.com/package/normalize-scss
  */
 /*=====  End of RESET CSS  ======*/
-@import 'node_modules/normalize-scss/sass/normalize/import-now';
+@import "node_modules/normalize-scss/sass/normalize/import-now";
