--- a/src/foundation/_all.scss
+++ b/src/foundation/_all.scss
@@ -1,4 +1,4 @@
-@import 'variables';
-@import 'colors';
-@import 'typography';
-@import 'mixins/index.scss';
+@import "variables";
+@import "colors";
+@import "typography";
+@import "mixins/index";
