--- a/src/foundation/_colors.scss
+++ b/src/foundation/_colors.scss
@@ -24,22 +24,22 @@ $danger-light: var(--danger-light, $red-300) !default;
 $danger-dark: var(--danger-dark, $red-600) !default;
 
 /*=====  colors map  ======*/
-$brandColors: (
-  'primary': $primary,
-  'primary-light': $primary-light,
-  'primary-dark': $primary-dark,
-  'secondary': $secondary,
-  'secondary-light': $secondary-light,
-  'secondary-dark': $secondary-dark,
-  'success': $success,
-  'success-light': $success-light,
-  'success-dark': $success-dark,
-  'warning': $warning,
-  'warning-light': $warning-light,
-  'warning-dark': $warning-dark,
-  'danger': $danger,
-  'danger-light': $danger-light,
-  'danger-dark': $danger-dark,
+$brand-colors: (
+  "primary": $primary,
+  "primary-light": $primary-light,
+  "primary-dark": $primary-dark,
+  "secondary": $secondary,
+  "secondary-light": $secondary-light,
+  "secondary-dark": $secondary-dark,
+  "success": $success,
+  "success-light": $success-light,
+  "success-dark": $success-dark,
+  "warning": $warning,
+  "warning-light": $warning-light,
+  "warning-dark": $warning-dark,
+  "danger": $danger,
+  "danger-light": $danger-light,
+  "danger-dark": $danger-dark,
 ) !default;
 
 /* Buttons colors  */
