--- a/src/foundation/_variables.scss
+++ b/src/foundation/_variables.scss
@@ -7,12 +7,12 @@
 
 /* Natural colors */
 
-$black: #000000;
+$black: #000;
 $dark: #1d1d1d;
 $dark-light: #737680;
-$dark-dark: #000000;
+$dark-dark: #000;
 
-$white: #ffffff;
+$white: #fff;
 $white-dark: #f5f5f5;
 
 /* DS colors */
@@ -57,7 +57,7 @@ $yellow-100: #fff5bf;
 $yellow-200: #fff08f;
 $yellow-300: #ffe95f;
 $yellow-400: #ffe32f;
-$yellow-500: #ffdd00;
+$yellow-500: #fd0;
 $yellow-600: #d4b300;
 $yellow-700: #917a00;
 $yellow-800: #665200;
@@ -75,17 +75,17 @@ $yellow-light: #f5e0bf;
 /// @type Font families
 /// @name Playfair
 /// @example font-family: var(--$playfair);
-$playfair: 'Playfair Display', serif;
+$playfair: "Playfair Display", serif;
 
 /// @group Typography/FontFamilies
 /// @type Font families
 /// @name Raleway
-$raleway: 'Raleway', sans-serif;
+$raleway: "Raleway", sans-serif;
 
 /// @group Typography/FontFamilies
 /// @type Font families
 /// @name Roboto
-$roboto: 'Roboto', sans-serif;
+$roboto: "Roboto", sans-serif;
 
 /*=============================================
 =            font sizes            =
@@ -221,15 +221,15 @@ $lh-lg: 1.8rem;
 =            Spacing            =
 =============================================*/
 $spaces: (
-  'xxs': 0.25rem,
-  'xs': 0.5rem,
-  'sm': 0.75rem,
-  'md': 1rem,
-  'lg': 1.25rem,
-  'xl': 1.5rem,
-  'xxl': 2rem,
-  'xxxl': 2.5rem,
-  'xxxxl': 3rem,
+  "xxs": 0.25rem,
+  "xs": 0.5rem,
+  "sm": 0.75rem,
+  "md": 1rem,
+  "lg": 1.25rem,
+  "xl": 1.5rem,
+  "xxl": 2rem,
+  "xxxl": 2.5rem,
+  "xxxxl": 3rem,
 );
 
 /*=============================================
@@ -254,8 +254,8 @@ $breakpoints: (
 =            Devices            =
 =============================================*/
 $devices: (
-  mobile: map-get($breakpoints, 'sm'),
-  tablet: map-get($breakpoints, 'md'),
-  desktop: map-get($breakpoints, 'lg'),
-  large-desktop: map-get($breakpoints, 'xl'),
+  mobile: map-get($breakpoints, "sm"),
+  tablet: map-get($breakpoints, "md"),
+  desktop: map-get($breakpoints, "lg"),
+  large-desktop: map-get($breakpoints, "xl"),
 );
