add lint fix script

--- a/src/foundation/mixins/_breakpoints.scss
+++ b/src/foundation/mixins/_breakpoints.scss
@@ -38,7 +38,7 @@
 /// }
 
 @mixin mobile {
-  @media (max-width: map-get($devices, "mobile")) {
+  @media screen and (max-width: map-get($devices, "mobile")) {
     @content;
   }
 }
