feat: add gulp and nodes-sass config

--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -1,7 +1,3 @@
-/* the normalize-scss will reset normalize browser's default setting */
-
-/* We import the package here and then import it in the global.scss */
-
 /* =============================================
 =            RESET CSS            =
 ============================================= */
@@ -12,6 +8,6 @@
  * About normalize.css: https://nicolasgallagher.com/about-normalize-css/
    *    https://www.npmjs.com/package/normalize-scss
  */
-
 /* =====  End of RESET CSS  ====== */
-@import "node_modules/normalize-scss/sass/normalize/import-now";
+
+@import "../../node_modules/css-reset-and-normalize/scss/reset-and-normalize";
