--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -105,38 +105,120 @@ $navbar-hover-bg-inverse: var(--navbar-hover-bg-inverse, $secondary) !default;
  * IE10+ doesn't honor `<meta name="viewport">` in some cases
  */
 @-ms-viewport {
-  width: device-width; }
+  width: device-width;
+}
 
 /**
  * general reset
  */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video, main {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+main {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /**
  * HTML5 display-role reset for older browsers
  */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section,
-main, summary {
-  display: block; }
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+main,
+summary {
+  display: block;
+}
 
 /**
  * inherit box model for all elements
@@ -144,7 +226,8 @@ main, summary {
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 /**
  * html root rules
@@ -168,7 +251,8 @@ html {
   /* 4 */
   -ms-overflow-style: scrollbar;
   /* 5 */
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 /**
  * body rules
@@ -183,7 +267,8 @@ body {
   /* 2 */
   font-family: sans-serif;
   /* 3 */
-  text-align: left; }
+  text-align: left;
+}
 
 /**
  * Future-proof rule: in browsers that support :focus-visible, suppress the focus outline
@@ -197,36 +282,44 @@ body {
  * and https://developer.paciellogroup.com/blog/2018/03/focus-visible-and-backwards-compatibility/
  */
 [tabindex="-1"]:focus:not(:focus-visible) {
-  outline: 0 !important; }
+  outline: 0 !important;
+}
 
 /**
  * Lists
  */
-ol, ul {
-  list-style: none; }
+ol,
+ul {
+  list-style: none;
+}
 
 /**
  * Quotes
  */
-blockquote, q {
-  quotes: none; }
+blockquote,
+q {
+  quotes: none;
+}
 
 blockquote::before,
 blockquote::after,
 q::before,
 q::after {
-  content: '';
-  content: none; }
+  content: "";
+  content: none;
+}
 
 /**
  * Tables
  */
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 caption {
-  caption-side: bottom; }
+  caption-side: bottom;
+}
 
 /**
  * Table Headers
@@ -238,7 +331,8 @@ th {
   /* 1 */
   text-align: inherit;
   /* 2 */
-  text-align: -webkit-match-parent; }
+  text-align: -webkit-match-parent;
+}
 
 /**
  * Horizontal Lines
@@ -250,7 +344,8 @@ hr {
   box-sizing: content-box;
   height: 0;
   /* 2 */
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Preformatted Text
@@ -265,13 +360,15 @@ code,
 kbd,
 samp {
   /* 1 */
-  font-family: monospace, monospace; }
+  font-family: monospace, monospace;
+}
 
 pre {
   /* 2 */
   overflow: auto;
   /* 3 */
-  -ms-overflow-style: scrollbar; }
+  -ms-overflow-style: scrollbar;
+}
 
 /**
  * Links
@@ -282,7 +379,8 @@ a {
   /* 1 */
   background-color: transparent;
   /* 2 */
-  -webkit-text-decoration-skip: objects; }
+  -webkit-text-decoration-skip: objects;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57- and Firefox 39-
@@ -299,24 +397,28 @@ abbr[title] {
   /* 3 */
   cursor: help;
   /* 4 */
-  text-decoration-skip-ink: none; }
+  text-decoration-skip-ink: none;
+}
 
 address {
   font-style: normal;
-  line-height: inherit; }
+  line-height: inherit;
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -326,38 +428,45 @@ sub,
 sup {
   position: relative;
   font-size: 75%;
-  line-height: 0; }
+  line-height: 0;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 /**
  * Prevent `em` being affected from global reset
  */
 em {
-  font-style: italic; }
+  font-style: italic;
+}
 
 /**
  * Remove the border on images inside links in IE 10.
  */
 img {
-  border-style: none; }
+  border-style: none;
+}
 
 /**
  * Hide SVG overflow in IE
  */
 svg:not(:root) {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /**
  * Remove the default `border-radius` that macOS Chrome adds.
  * Details at https://github.com/twbs/bootstrap/issues/24093
  */
 button {
-  border-radius: 0; }
+  border-radius: 0;
+}
 
 /**
  * Work around a Firefox/IE bug where the transparent `button` background
@@ -366,7 +475,8 @@ button {
  */
 button:focus {
   outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color; }
+  outline: 5px auto -webkit-focus-ring-color;
+}
 
 /**
  * form element resets
@@ -383,7 +493,8 @@ textarea {
   /* 2 */
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+}
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -395,7 +506,8 @@ button,
 [type="submit"],
 [type="button"] {
   /* 2 */
-  -webkit-appearance: button; }
+  -webkit-appearance: button;
+}
 
 /**
  * Remove the default appearance of temporal inputs to avoid a Mobile Safari
@@ -408,7 +520,8 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  -webkit-appearance: listbox; }
+  -webkit-appearance: listbox;
+}
 
 /**
  * 1. Remove the default vertical scrollbar in IE.
@@ -417,35 +530,40 @@ input[type="month"] {
  */
 textarea {
   overflow: auto;
-  resize: vertical; }
+  resize: vertical;
+}
 
 /**
  * Show the overflow in IE.
  */
 button,
 input {
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  */
 button,
 select {
-  text-transform: none; }
+  text-transform: none;
+}
 
 /**
  * Set the cursor for non-`<button>` buttons
  * Details at https://github.com/twbs/bootstrap/pull/30562
  */
 [role="button"] {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /**
  * Remove the inheritance of word-wrap in Safari.
  * See https://github.com/twbs/bootstrap/issues/24990
  */
 select {
-  word-wrap: normal; }
+  word-wrap: normal;
+}
 
 /**
  * Remove inner border and padding from Firefox, but don't restore the outline
@@ -456,7 +574,8 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10-
@@ -467,7 +586,8 @@ input[type="checkbox"] {
   /* 1 */
   box-sizing: border-box;
   /* 2 */
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Suppress the focus outline on elements that cannot be accessed via keyboard.
@@ -476,7 +596,8 @@ input[type="checkbox"] {
  * Credit: https://github.com/suitcss/base
  */
 [tabindex="-1"]:focus {
-  outline: 0 !important; }
+  outline: 0 !important;
+}
 
 /**
  * Browsers set a default `min-width: min-content` on fieldsets,
@@ -486,7 +607,8 @@ input[type="checkbox"] {
  * and https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
  */
 fieldset {
-  min-width: 0; }
+  min-width: 0;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -500,13 +622,15 @@ legend {
   /* 2 */
   color: inherit;
   /* 3 */
-  display: block; }
+  display: block;
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /**
  * 1. Remove the default vertical scrollbar in IE 10+.
@@ -517,7 +641,8 @@ textarea {
   /* 1 */
   overflow: auto;
   /* 2 */
-  resize: vertical; }
+  resize: vertical;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -528,14 +653,16 @@ textarea {
   /* 1 */
   box-sizing: border-box;
   /* 2 */
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
@@ -545,14 +672,16 @@ textarea {
   /* 1 */
   -webkit-appearance: textfield;
   /* 2 */
-  outline-offset: -2px; }
+  outline-offset: -2px;
+}
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -562,29 +691,36 @@ textarea {
   /* 1 */
   -webkit-appearance: button;
   /* 2 */
-  font: inherit; }
+  font: inherit;
+}
 
 /**
  * Correct element display for output
  */
 output {
-  display: inline-block; }
+  display: inline-block;
+}
 
 /**
  * Add the correct display in IE 10+.
  */
 template {
-  display: none; }
+  display: none;
+}
 
 /**
  * Always hide an element with the `hidden` HTML attribute (from PureCSS).
  * Needed for proper display in IE 10-.
  */
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 /* // define variables in the root scope to override the default values in the foundation
  */
 :root {
   --btn-primary-color: #fff;
-  --navbar-bg: var(--primary, #2f8fff); }
+  --navbar-bg: var(--primary, #2f8fff);
+}
+
+/*# sourceMappingURL=Users/romany.sefen/Desktop/DEV/Courses/Design_System/Design_System_2/src/lib/target/global.css.map */
