chore: update readme file

--- a/src/foundation/_colors.scss
+++ b/src/foundation/_colors.scss
@@ -1,3 +1,4 @@
+@import "./variables";
 /* Global Text Colors */
 $body-text-color: var(--body-text-color, $dark) !default;
 $body-bg-color: var(--body-bg-color, $white) !default;
