--- a/src/molecules/Panel.scss
+++ b/src/molecules/Panel.scss
@@ -1,8 +1,8 @@
-@import "../foundation/all";
+@import '../foundation/all';
 
 .panel-primary {
   background-color: $primary;
   color: $white;
-  padding: map-get($spaces, "xxxl") map-get($spaces, "xxl");
+  padding: map-get($spaces, 'xxxl') map-get($spaces, 'xxl');
   border-radius: 5px;
 }
