feat: add nx monrepo setup

--- a/packages/scss/src/base/_reset.scss
+++ b/packages/scss/src/base/_reset.scss
@@ -10,4 +10,4 @@
  */
 /* =====  End of RESET CSS  ====== */
 
-@import '../../node_modules/css-reset-and-normalize/scss/reset-and-normalize';
+@import '../../../../node_modules/css-reset-and-normalize/scss/reset-and-normalize';
